# renju_game

./: .travis.yml  LICENSE  README.md  renju.cabal  stack.yaml
app/: Main.hs
save/: save_st.txt  save_w.txt
src/: Files.hs  Graphics.hs  Logic.hs  Types.hs
test/: Spec.hs
