name:                renju
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/cmc-haskell-2016/renju#readme
license:             BSD3
license-file:        LICENSE
author:              renju Team
maintainer:          renju@example.com
copyright:           2016 renju Team
category:            Experimental
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  ghc-options: -Wall
  hs-source-dirs:      src
  exposed-modules:     Graphics, Logic, Files,Types
  build-depends:       base >= 4.7 && < 5
                       , gloss >= 1.8.0
                       , matrix
  default-language:    Haskell2010

executable renju
  ghc-options: -Wall
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , renju
                     , gloss
                     , matrix
                     , vector
  default-language:    Haskell2010

test-suite renju-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , renju
                     , gloss
                     , matrix
                     , vector
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2016/renju
